# URL-slice-n-dice

./: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: README.md
.github/workflows/: ci-cd.yml  quick-check.yml
app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py  utils.py
tests/: __init__.py  test_integration.py
